update source code to version 1.4.2

--- a/app/src/main/res/drawable/bu_location_4.xml
+++ b/app/src/main/res/drawable/bu_location_4.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<animation-list
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:duration="@integer/icon_animation_hide_time_ms" android:drawable="@drawable/bu_location" />
-    <item android:duration="@integer/icon_animation_transiotion_time_ms" android:drawable="@drawable/bu_location_4_a" />
-    <item android:duration="@integer/icon_animation_show_time_ms" android:drawable="@drawable/bu_location_4_d" />
-    <item android:duration="@integer/icon_animation_transiotion_time_ms" android:drawable="@drawable/bu_location_4_a" />
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:drawable="@drawable/bu_location"
+        android:duration="@integer/icon_animation_hide_time_ms" />
+    <item
+        android:drawable="@drawable/bu_location_4_a"
+        android:duration="@integer/icon_animation_transiotion_time_ms" />
+    <item
+        android:drawable="@drawable/bu_location_4_d"
+        android:duration="@integer/icon_animation_show_time_ms" />
+    <item
+        android:drawable="@drawable/bu_location_4_a"
+        android:duration="@integer/icon_animation_transiotion_time_ms" />
 </animation-list>
