--- a/app/src/main/res/drawable/blink_anim.xml
+++ b/app/src/main/res/drawable/blink_anim.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<animation-list
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:duration="300" android:drawable="@drawable/blink" />
-    <item android:duration="60" android:drawable="@drawable/blink_a" />
-    <item android:duration="100" android:drawable="@drawable/blink_d" />
-    <item android:duration="60" android:drawable="@drawable/blink_a" />
+<animation-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:drawable="@drawable/blink"
+        android:duration="300" />
+    <item
+        android:drawable="@drawable/blink_a"
+        android:duration="60" />
+    <item
+        android:drawable="@drawable/blink_d"
+        android:duration="100" />
+    <item
+        android:drawable="@drawable/blink_a"
+        android:duration="60" />
 </animation-list>
