--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,40 +3,53 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:orientation="vertical"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ui.MainActivity">
 
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:gravity="center_horizontal"
         android:text="@string/notify_icon_type_header"
-        android:id="@+id/textView" />
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <RadioGroup
-        android:layout_marginTop="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:layout_marginTop="10dp"
+        android:orientation="vertical">
 
         <RadioButton
+            android:id="@+id/blinkIconRadio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/notify_icon_type_blink"
-            android:id="@+id/blinkIconRadio" />
+            android:text="@string/notify_icon_type_blink" />
 
         <RadioButton
+            android:id="@+id/buIconRadio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/notify_icon_type_bu"
             android:layout_marginTop="10dp"
-            android:id="@+id/buIconRadio" />
-        </RadioGroup>
+            android:text="@string/notify_icon_type_bu" />
+    </RadioGroup>
+
+    <CheckBox
+        android:id="@+id/showGpsLocationState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/show_gps_location_state" />
+
+    <CheckBox
+        android:id="@+id/showNetworkLocationState"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/show_network_location_state" />
 
 </LinearLayout>
